# examen_bentoml

./: Makefile  Notes.md  README.md  bentofile.yaml  pyproject.toml  requirements.txt
data/processed/: X_test.csv  X_train.csv
src/: prepare_data.py  service.py  train_model.py
tests/: test_service.py  test_service_old.py
